testing/framework/resources/Advanced/Failing/mondrian/query6186.e
USA	CA	Mill Valley	7962	Joseph Anderson	Joseph Anderson	F	M	High School Degree	$30K - $50K
USA	CA	Palo Alto	5005	Andre Thompson	Andre Thompson	M	M	High School Degree	$30K - $50K
